# templates

./: .gitattributes  5697f897-5a89-4d56-9a31-25ca51d2ac84.json  README.md  app.js  app.py  bun  cogneedocs  commands.txt  concentration.py  config.json  config.yaml  crush.json  custom_stream.py  cypher-shell_1.1.15_all.deb  cypher-shell_2025.06.0_all.deb  cypher-shell_5.26.9_all.deb  example_agent_configs.py  forbid.txt  graph  graphiti  graphml.js  ingest.py  install.txt  laggraph_tool_calling.py  langgraph_backend.py  lightrag  lightrag_config  loss.excalidraw  loss.md  main.py  neo4j_2025.06.0_all.deb  pdf  prompts  proxy.py  q1.json  quick_start.py  something.json  temp.json  testing-azure-login  tree.htmld  (+3 more)
advanced-search-algorithm/: README.md  benchmark.py  engine.py  fastapi_config.py  fastapi_logger.py  fastapi_readme.md  ingestion.py  main.py  search.py
agentic_tool_stream/: README.md  benchmark.py  embeddings_client.py  engine.py  ingestion.py  main.py  mock_data_generator.py  search.py  search_engine.py  test_system.py
agentic_tool_stream/advanced-search-algorithm/: README.md  config.py  engine.py  ingestion.py  main.py  pyproject.toml  search.py  technical_documents.txt  utils.py
agentic_tool_stream/backend/: app.py  pyproject.toml  response_test.txt  test.py
agentic_tool_stream/backend/tmp/: auth.py  auth_system.json  config.py  data.db  database.py  main.py  models.py  rbac.py  test_routes.py  test_tokens.py  user_data.json
agno_agents_ui/: README.md  benchmark.py  cache_utils.py  config.py  embeddings.py  ingest_and_index.py  main.py  memory_manager.py  models.py  optimized_openai.py  search.py  storage.py  tools.py
agno_agents_ui/backend/: README.md  langgraph_agent.py  main.py  pyproject.toml
backend/: pyproject.toml  requirements.txt
chat_backend/: README.md  example_client.py  index.html  pyproject.toml  technical_requirement.txt  test_memory.py
chat_backend/app/: main.py
chat_backend/app/core/: __init__.py  reasoning_agent.py
chat_backend/app/memory/: __init__.py  memory_manager.py
chat_backend/app/models/: __init__.py  schemas.py
chat_backend/app/storage/: __init__.py  session_manager.py
chat_backend/app/tools/: __init__.py  base_tools.py
chat_backend/app/utils/: __init__.py  llm_client.py
dashboard/: main.py  react_agent.py  technical_details.txt  tools.py
dashboard/backend/: controls_data.csv  database.py  generate_data.py  main.py  models.py  pyproject.toml
dashboard/backend/feedback/external_loss/: 1_feedback.json
dashboards/: EDA.py  EVAL.py  FEATURE.py  MODEL.py  MSFT_Score.txt  config.yaml  fresh_start.py  main.py  submission_log.json
docling-models/: README.md  create.py  index.html  main.py
frontend/: memory_manager.py  package-lock.json  storage.py
graph-rag-agent/: .env.example  .gitignore  (+1 more)
langgraph-ui/backend/: README.md  app.py  chats.json  config.py  indexer.py  main.py  pyproject.toml  searcher.py  test_quick.py  users.json
new_vix_tools/: app.py  main.py  plot_lognormal.py  pyproject.toml  tailwind.config.js
new_vix_tools/sessions/: 029ef953-f82e-40eb-af34-c8653d517ed3_memory.db  029ef953-f82e-40eb-af34-c8653d517ed3_storage.db  2782d5e8-644e-4da7-a914-33ccb6cff763_storage.db
new_vix_tools/src/: App.js  Home.js
new_vix_tools/static/: index.html
new_vix_tools/uploads/: 567af55c-429b-4a84-aaad-f8002bc5b109_external_loss_data.csv
proxy_man/documentation/backend/: Dockerfile  README.md  docs_logic.py  docs_router.py  main.py  pyproject.toml  test_api.py
(+364 files in other folders)
