[project]
name = "chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio-mqtt>=0.16.2",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.2",
    "mem0ai>=0.1.117",
    "openai>=1.99.9",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sse-starlette>=3.0.2",
    "tinydb>=4.8.2",
    "uvicorn>=0.35.0",
]
