[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.8",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.99.2",
    "packaging>=25.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tinydb>=4.8.2",
    "uvicorn>=0.35.0",
]
