[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "tinydb>=4.8.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
