[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "tantivy>=0.22.0",
    "uvicorn>=0.37.0",
]
